# fused-iq-kernel

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
baseline/: compiled.py  reference.py
bench/: benchmark.py  make_roofline.py  ncu_profile.sh
config/: default.yaml
docs/: 01_iq_layout_decision.md  02_reference_op_and_baselines.md  design.md  design_w4a16.md  index.md
kernel_cuda/: binding.cpp  iq_fused.cu  iq_fused.h
kernel_triton/: iq_fused_triton.py  register.py
kernel_w4a16/: __init__.py  reference.py  register.py  w4a16_triton.py
results/: ROOFLINE_PLACEHOLDER.md  report_card.md
tests/: exit_check_p1.sh  exit_check_p2.sh  exit_check_p3.sh  exit_check_p4.sh  exit_check_p5.sh  exit_check_w4a16.sh  test_parity.py  test_shapes.py  test_w4a16_parity.py
